Version .45 -fixed horizontal scrolling and changed hover content

--- a/css/style.css
+++ b/css/style.css
@@ -164,14 +164,27 @@ body {
 #workSection .workDivs div label, #workSectionTheater .workDivs div label {
   transform: none;
 }
+#workSection .describingThing, #workSectionTheater .describingThing {
+  margin-left: 10%;
+  font-size: 0.5em;
+  display: none;
+}
 #workSection .project1, #workSectionTheater .project1, #workSection .project21, #workSectionTheater .project21, #workSection .project20, #workSectionTheater .project20, #workSection .project19, #workSectionTheater .project19, #workSection .project18, #workSectionTheater .project18, #workSection .project17, #workSectionTheater .project17, #workSection .project16, #workSectionTheater .project16, #workSection .project15, #workSectionTheater .project15, #workSection .project14, #workSectionTheater .project14, #workSection .project13, #workSectionTheater .project13, #workSection .project12, #workSectionTheater .project12, #workSection .project11, #workSectionTheater .project11, #workSection .project10, #workSectionTheater .project10, #workSection .project9, #workSectionTheater .project9, #workSection .project8, #workSectionTheater .project8, #workSection .project7, #workSectionTheater .project7, #workSection .project6, #workSectionTheater .project6, #workSection .project5, #workSectionTheater .project5, #workSection .project4, #workSectionTheater .project4, #workSection .project3, #workSectionTheater .project3, #workSection .project2, #workSectionTheater .project2 {
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.25), rgba(163, 189, 196, 0.75)), url("../img/skm/dragon demo.gif");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 #workSection .project1:hover, #workSectionTheater .project1:hover, #workSection .project21:hover, #workSectionTheater .project21:hover, #workSection .project20:hover, #workSectionTheater .project20:hover, #workSection .project19:hover, #workSectionTheater .project19:hover, #workSection .project18:hover, #workSectionTheater .project18:hover, #workSection .project17:hover, #workSectionTheater .project17:hover, #workSection .project16:hover, #workSectionTheater .project16:hover, #workSection .project15:hover, #workSectionTheater .project15:hover, #workSection .project14:hover, #workSectionTheater .project14:hover, #workSection .project13:hover, #workSectionTheater .project13:hover, #workSection .project12:hover, #workSectionTheater .project12:hover, #workSection .project11:hover, #workSectionTheater .project11:hover, #workSection .project10:hover, #workSectionTheater .project10:hover, #workSection .project9:hover, #workSectionTheater .project9:hover, #workSection .project8:hover, #workSectionTheater .project8:hover, #workSection .project7:hover, #workSectionTheater .project7:hover, #workSection .project6:hover, #workSectionTheater .project6:hover, #workSection .project5:hover, #workSectionTheater .project5:hover, #workSection .project4:hover, #workSectionTheater .project4:hover, #workSection .project3:hover, #workSectionTheater .project3:hover, #workSection .project2:hover, #workSectionTheater .project2:hover {
   background-image: url("../img/skm/dragon demo.gif");
+  background-position: left;
+  background-size: contain;
+  background-color: grey;
+}
+#workSection .project1:hover .describingThing, #workSectionTheater .project1:hover .describingThing, #workSection .project21:hover .describingThing, #workSectionTheater .project21:hover .describingThing, #workSection .project20:hover .describingThing, #workSectionTheater .project20:hover .describingThing, #workSection .project19:hover .describingThing, #workSectionTheater .project19:hover .describingThing, #workSection .project18:hover .describingThing, #workSectionTheater .project18:hover .describingThing, #workSection .project17:hover .describingThing, #workSectionTheater .project17:hover .describingThing, #workSection .project16:hover .describingThing, #workSectionTheater .project16:hover .describingThing, #workSection .project15:hover .describingThing, #workSectionTheater .project15:hover .describingThing, #workSection .project14:hover .describingThing, #workSectionTheater .project14:hover .describingThing, #workSection .project13:hover .describingThing, #workSectionTheater .project13:hover .describingThing, #workSection .project12:hover .describingThing, #workSectionTheater .project12:hover .describingThing, #workSection .project11:hover .describingThing, #workSectionTheater .project11:hover .describingThing, #workSection .project10:hover .describingThing, #workSectionTheater .project10:hover .describingThing, #workSection .project9:hover .describingThing, #workSectionTheater .project9:hover .describingThing, #workSection .project8:hover .describingThing, #workSectionTheater .project8:hover .describingThing, #workSection .project7:hover .describingThing, #workSectionTheater .project7:hover .describingThing, #workSection .project6:hover .describingThing, #workSectionTheater .project6:hover .describingThing, #workSection .project5:hover .describingThing, #workSectionTheater .project5:hover .describingThing, #workSection .project4:hover .describingThing, #workSectionTheater .project4:hover .describingThing, #workSection .project3:hover .describingThing, #workSectionTheater .project3:hover .describingThing, #workSection .project2:hover .describingThing, #workSectionTheater .project2:hover .describingThing {
+  display: block;
 }
 #workSection .project2, #workSectionTheater .project2 {
   grid-column-start: 2;
